# Tycoon-Monorepo

./: .env.example  .gitignore  AREA_3_UNAUTHORIZED_TESTS.md  CONTRACT_WORKSPACE_REORGANIZATION.md  IMPLEMENTATION_CHECKLIST.md  ISSUE_RESOLVED.md  ISSUE_RESOLVED_WAITLIST_ADMIN.md  PAUSE_IMPLEMENTATION_SUMMARY.md  PAUSE_LEGAL_COMMS_PLAN.md  README.md  TODO.md  TYPESCRIPT_FIXES.md  USER_INVENTORY_COMPLETE.md  WAITLIST_ADMIN_FLOW.txt  WAITLIST_ADMIN_IMPLEMENTATION.md  WAITLIST_ADMIN_README.md  package.json  verify-admin-analytics.sh
backend/: .env.example  CHANGELOG.md  GAME_EVENT_INTEGRATION.md  GAME_EVENT_INTEGRATION_CHECKLIST.md  GAME_EVENT_INTEGRATION_SUMMARY.md  GIFT_SECURITY_IMPLEMENTATION.md  IMPLEMENTATION_SUMMARY_389_390.md  LOGGING.md  README.md  TEST_FIXES_SUMMARY.md  USER_INVENTORY_IMPLEMENTATION.md  WAITLIST_ADMIN_API.md  WAITLIST_ADMIN_MANAGEMENT.md  analytics-walkthrough.md  jest.config.ts  lint_results.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
contract/: CEI_SECURITY_AUDIT.md  Cargo.toml  DEPLOYMENT_RUNBOOK.md  Makefile  README.md  RELEASE_CHECKLIST.md
contract/contracts/tycoon-lib/: CHANGELOG.md  Cargo.toml
contract/contracts/tycoon-lib/src/: fees.rs  lib.rs
contract/contracts/tycoon-main-game/: CHANGELOG.md  Cargo.toml
contract/contracts/tycoon-main-game/src/: events.rs  lib.rs  storage.rs  test.rs
frontend/: .env.example  .size-limit.json  BRAND.md  BUNDLE_BUDGET.md  README.md  bundle-baseline.json  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  vitest.config.ts
scripts/: run-all-tests.bat
(+629 files in other folders)
