[package]
name = "tycoon-lib"
version = "0.1.0"
edition = "2021"
publish = false
description = "Shared types library for Tycoon contracts"

[lib]
crate-type = ["lib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }