[package]
name = "tycoon-main-game"
version = "0.1.0"
edition = "2021"
publish = false
description = "Main game logic contract for Tycoon — players, games, and lobbies."

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }